--- a/gb/22/4/20/n13715640.md
+++ b/gb/22/4/20/n13715640.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>尽管法院裁决 加州交通机构仍要求乘客戴口罩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/04/id13715655-tu1-GettyImages-57424486-600x400.jpg" />
-<h6>图为乘客在旧金山搭乘公交车资料照。(Justin Sullivan/Getty Images)
-</h6>
+<h6>图为乘客在旧金山搭乘公交车资料照。(Justin Sullivan/Getty Images)</h6>
 <hr>
-	<p>【大纪元2022年04月20日讯】（大纪元记者闻慧编译报导）尽管周一（4月18日）联邦法官在佛罗里达州法院作出裁决，取消了在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E4%BA%A4%E9%80%9A.md#1">公共交通</a>场所上<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%B4%E5%8F%A3%E7%BD%A9.md#1">戴口罩</a>的规定，但当天加州的一些公共交通机构仍要求乘客在公交车和火车上戴口罩。</p>
-<p>拜登政府表示，周一的法院裁决，意味着美国疾??病控制与预防中心（CDC）发布的要求在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E4%BA%A4%E9%80%9A.md#1">公共交通</a>场所（包括飞机、机场、公共汽车和火车）上使用口罩的联邦命令已不再生效。但CDC仍然建议公众在使用公共交通工具时佩<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%B4%E5%8F%A3%E7%BD%A9.md#1">戴口罩</a>。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E4%BA%A4%E9%80%9A%E6%9C%BA%E6%9E%84.md#1">加州交通机构</a>急切重定交通系统中戴口罩的指南和要求，周二，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>部分机构官员，包括洛杉矶县大都会交通管理局（Los Angeles County Metropolitan Transportation Authority）已表示不再要求人们戴口罩，但许多机构仍要求乘客在等待联邦政府进一步澄清时戴上口罩。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>国际机场发言人希思?蒙哥马利（Heath Montgomery）表示，该机场正在效仿美国运输安全管理局（Transportation Security Administration）的做法，“在室内公共交通环境中”不再执行口罩令。</p>
+	<p>【大纪元2022年04月20日讯】（大纪元记者闻慧编译报导）尽管周一（4月18日）联邦法官在佛罗里达州法院作出裁决，取消了在公共交通场所上戴口罩的规定，但当天加州的一些公共交通机构仍要求乘客在公交车和火车上戴口罩。</p>
+<p>拜登政府表示，周一的法院裁决，意味着美国疾??病控制与预防中心（CDC）发布的要求在公共交通场所（包括飞机、机场、公共汽车和火车）上使用口罩的联邦命令已不再生效。但CDC仍然建议公众在使用公共交通工具时佩戴口罩。</p>
+<p>加州交通机构急切重定交通系统中戴口罩的指南和要求，周二，洛杉矶部分机构官员，包括洛杉矶县大都会交通管理局（Los Angeles County Metropolitan Transportation Authority）已表示不再要求人们戴口罩，但许多机构仍要求乘客在等待联邦政府进一步澄清时戴上口罩。</p>
+<p>洛杉矶国际机场发言人希思?蒙哥马利（Heath Montgomery）表示，该机场正在效仿美国运输安全管理局（Transportation Security Administration）的做法，“在室内公共交通环境中”不再执行口罩令。</p>
 <p>蒙哥马利说，旅客可自行决定是否在机场戴口罩，并补充说，官员们鼓励那些想戴口罩的人继续这样做。</p>
 <p>洛杉矶县大都会交通管理局发言人戴夫?索特罗（Dave Sotero）在周一的声明中说：“继续要求乘客在我们的系统中佩戴口罩，”“我们知悉今天的裁决，并等待联邦政府的进一步指导。”但周二下午稍晚已宣布将取消对乘客和司机的强制要求。</p>
 <p>在洛杉矶市中心运营DASH巴士服务和整个地区的通勤快线（Commuter Express）的洛杉矶交通局（Los Angeles Department of Transportation）说，它将继续要求乘客戴上口罩，等待进一步审议。</p>
@@ -18,46 +17,34 @@
 <p>特罗斯特说：“如果我们得到这个消息，那么湾区捷运将不会再强制要求。”</p>
 <p>运营公共汽车、轻轨、有轨电车和缆车的旧金山Muni系统表示，在联邦运输管理局发布进一步指导意见之前，口罩令仍然有效。女发言人埃里卡?加藤（Erica Kato）说：“我们正在等待更多消息。”◇</p>
 <p>责任编辑：方平</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/29/n13681868.md#1">【疫情3.30】美21州起诉CDC交通口罩令</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/31/n13684872.md#1">南卡罗来纳州加入公共交通设施内口罩令诉讼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/2/n13690222.md#1">湾区所有大型集会 不再要求接种或阴性证明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/4/n13695793.md#1">圣地亚哥联合学区取消室内口罩令</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13889893.md#1">沁园春?贺神韵2023全球巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895469.md#1">【新闻大家谈】大咖云集 热评2022年度之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895719.md#1">【秦鹏观点】秦刚升任新外长 中美军机险相撞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895248.md#1">【晚间新闻】中南海惊现两个指挥中心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893987.md#1">中共多名退役军官接连死亡 包括毛泽东警卫员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894498.md#1">网易视频“2022年的集体记忆”火爆网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893955.md#1">传中共导弹专家李君龙染疫亡 知情者：震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893138.md#1">知名演员潘德民去世 曾出演众多红色电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893835.md#1">徐娇自嘲感染“炫饭株” 晒病照喊“被饿醒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894649.md#1">杨幂参股公司被爆欠债亿元 公司官方微博回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894614.md#1">站在路边突然倒下 台湾知名音乐人李惠群骤逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893287.md#1">小狗能活多久？ 哪个品种的寿命最长？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883334.md#1">不再让酒精伤肝 养肝护肝全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/20/n13715640.htm">尽管法院裁决 加州交通机构仍要求乘客戴口罩</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/4/20/n13715640.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688442.md#1">【直播】诺姆部长就“旅行黄金时代”开记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/20/n13715640.htm">尽管法院裁决 加州交通机构仍要求乘客戴口罩</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/4/20/n13715640.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
